[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/SlickerTitleDynamicFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menus/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/SlickerTheme.tres" type="Theme" id=3]
[ext_resource path="res://UI/SlickerSmallDynamicFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menus/MenuStats.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "StartGame"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.0862745, 0, 0, 1 ), Color( 0.0862745, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "StartGame"
} ]
}

[sub_resource type="Animation" id=2]
length = 20.0
tracks/0/type = "value"
tracks/0/path = NodePath("Title/VBoxContainer/TitleFont:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10, 15, 20 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.960784, 0.776471, 0.776471, 1 ), Color( 0.584314, 0, 0, 1 ) ]
}

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_right = 48.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Title"]
margin_left = 3.0
margin_right = 93.0
margin_bottom = 48.0

[node name="Control" type="Control" parent="Title/VBoxContainer"]
margin_right = 90.0

[node name="TitleFont" type="Label" parent="Title/VBoxContainer"]
margin_top = 4.0
margin_right = 90.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "slicker"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Title"
anims/StartGame = SubResource( 1 )
anims/Title = SubResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -36.5
margin_top = -138.0
margin_right = 36.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 73.0
margin_bottom = 138.0
alignment = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_right = 73.0

[node name="EndlessButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 73.0
margin_bottom = 26.0
text = "endless mode"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 4.0
margin_top = 30.0
margin_right = 68.0
margin_bottom = 52.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "start game"

[node name="ExtrasButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 73.0
margin_bottom = 78.0
text = "extras"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 14.0
margin_top = 82.0
margin_right = 59.0
margin_bottom = 104.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "options"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 21.0
margin_top = 108.0
margin_right = 51.0
margin_bottom = 130.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "quit"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 73.0
margin_bottom = 134.0

[node name="Control3" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 73.0
margin_bottom = 138.0

[node name="MenuStats" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuStats"]
margin_left = 16.0
margin_right = 24.0
margin_bottom = 40.0

[node name="HighestFloorLabel" type="Label" parent="MenuStats/VBoxContainer"]
margin_right = 8.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 4 )

[node name="CurrencyLabel" type="Label" parent="MenuStats/VBoxContainer"]
margin_top = 22.0
margin_right = 8.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
align = 2

[node name="TouchScreen" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TouchScreen"]
margin_top = 8.0
margin_right = 95.0
margin_bottom = 32.0

[node name="TouchScreenCheckBox" type="CheckBox" parent="TouchScreen/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="TouchScreen/HBoxContainer"]
margin_left = 28.0
margin_top = 3.0
margin_right = 95.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
text = "enable touchscreen"

[node name="Flashlight" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -113.0
margin_top = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Flashlight"]
margin_left = 14.0
margin_top = 8.0
margin_right = 99.0
margin_bottom = 32.0

[node name="FlashlightCheckBox" type="CheckBox" parent="Flashlight/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Flashlight/HBoxContainer"]
margin_left = 28.0
margin_top = 3.0
margin_right = 85.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
text = "enable flashlight"
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExtrasButton" to="." method="_on_ExtrasButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="toggled" from="TouchScreen/HBoxContainer/TouchScreenCheckBox" to="." method="_on_TouchScreenCheckBox_toggled"]
[connection signal="toggled" from="Flashlight/HBoxContainer/FlashlightCheckBox" to="." method="_on_FlashlightCheckBox_toggled"]
